--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,23 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    
+    <dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-clean-plugin</artifactId>
+    <version>2.4.1</version>
+</dependency>
+
     <dependency>
         <groupId>com.sparkjava</groupId>
         <artifactId>spark-core</artifactId>
         <version>2.9.1</version>
     </dependency>
+    <dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-resources-plugin</artifactId>
+    <version>2.5</version>
+</dependency>
+
        <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
@@ -33,13 +44,39 @@
     <artifactId>httpclient</artifactId>
     <version>4.5.11</version>
 </dependency>
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-jar-plugin</artifactId>
+    <version>2.3.2</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-install-plugin</artifactId>
+    <version>2.3.1</version>
+</dependency>
 
-    
+    <dependency>
+    <groupId>org.apache.maven.surefire</groupId>
+    <artifactId>surefire-junit3</artifactId>
+    <version>2.10</version>
+</dependency>
+
     <dependency>
 	    <groupId>org.reflections</groupId>
 	    <artifactId>reflections</artifactId>
 	    <version>0.9.12</version>
 </dependency>
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.10</version>
+</dependency>
+<dependency>
+    <groupId>org.codehaus.plexus</groupId>
+    <artifactId>plexus-utils</artifactId>
+    <version>2.1</version>
+</dependency>
+
     
   </dependencies>
   <!-- build configuration -->
